# Get-matrix

./: .pre-commit-config.yaml  README.md  pyproject.toml
core/: get_matrix.py  matrix_traversal.py
matrix/: get_matrix.py  utils.py
tests/: test_matrix.py  test_traverse_matrix.py
