[tool.poetry]
name = "project-traverse-matrix"
version = "0.1.0"
description = ""
authors = ["Viktor Kislyak <viktorkislyak1996@gmail.com>"]
readme = "README.md"
packages = [{include = "project_traverse_matrix"}]

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.3.1"
asyncio = "^3.4.3"
aiohttp = "^3.8.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
coverage = "^7.2.5"
pytest-asyncio = "^0.21.0"
asynctest = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
